# cassandra

./: .gitignore  LICENSE  README.md  claude.md  pyproject.toml  setup.py
docs/: ROADMAP.md
src/cassandra/: __init__.py  cli.py  config.py  interactive.py
src/cassandra/data/: __init__.py  exceptions.py  tables.py  volumes.py
src/cassandra/mlflow/: __init__.py  exceptions.py  integration.py
tests/: __init__.py
tests/integration/: __init__.py  test_data.py  test_mlflow.py
tests/unit/: test_config.py  test_data.py
