[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cassandra-automl"
version = "0.1.0"
description = "Production-ready agentic ML training framework with HuggingFace, Optuna/Ray Tune, and TorchDistributor on Databricks"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = [
    "machine-learning",
    "transformers",
    "huggingface",
    "hyperparameter-optimization",
    "optuna",
    "ray-tune",
    "distributed-training",
    "databricks",
    "mlflow",
    "langchain",
    "langgraph",
    "agentic-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies synced to DBR 18 ML
dependencies = [
    # MLflow - exact version from DBR 18 ML
    "mlflow-skinny==3.8.1",
    # LangChain ecosystem - exact versions from DBR 18 ML
    "langchain==1.0.3",
    "langgraph==1.0.3",
    # Data processing - compatible versions with DBR 18 ML
    "pandas==2.2.3",
    "numpy>=1.24.0,<3",  # Relaxed for databricks-langchain compatibility
    "scikit-learn==1.6.1",
    # Deep Learning & Transformers
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    # Hyperparameter Optimization
    "optuna>=3.4.0",
    "ray[tune]>=2.8.0",
    # Databricks ecosystem
    "databricks-sdk>=0.40.0",
    "databricks-langchain>=0.15.0",
    "unitycatalog-langchain>=0.2.0",
    "databricks-sql-connector>=3.0.0",
    # CLI and utilities
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "prophet>=1.3.0",
    "statsmodels>=0.14.6",
    "seaborn>=0.13.2",
    "scipy>=1.17.1",
    "matplotlib>=3.10.9",
    "mlflow>=3.8.1",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.4.1",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.31.0",
]

# Time series models for MLflow integration testing
timeseries = [
    "prophet>=1.1.0",
    "statsmodels>=0.14.0",
    "seaborn>=0.12.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
]

# GPU support with optimized libraries
gpu = [
    "nvidia-ml-py>=12.535.77",
    "flash-attn>=2.3.0",  # Flash Attention for efficient training
]

# Ray with additional backends
ray-full = [
    "ray[tune,data,train]>=2.8.0",
]

# PEFT for parameter-efficient fine-tuning
peft = [
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",  # For QLoRA
]

# Full MLflow for local development (not needed in Databricks)
mlflow-full = [
    "mlflow>=3.8.1",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.22.0",
]

# All optional dependencies
all = [
    "cassandra-automl[dev,gpu,mlflow-full,timeseries,docs]",
]

[project.scripts]
cassandra = "cassandra.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/cassandra"
Documentation = "https://github.com/yourusername/cassandra#readme"
Repository = "https://github.com/yourusername/cassandra.git"
Issues = "https://github.com/yourusername/cassandra/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cassandra*"]

[tool.setuptools.package-data]
cassandra = ["py.typed"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip() without an explicit strict= parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["ARG", "S101"]  # allow unused arguments and assert in tests

[tool.ruff.lint.isort]
known-first-party = ["cassandra"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "autogluon.*",
    "langchain.*",
    "langgraph.*",
    "databricks.*",
    "mlflow.*",
    "prophet.*",
    "statsmodels.*",
    "seaborn.*",
    "matplotlib.*",
    "scipy.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external services",
    "databricks: marks tests as requiring Databricks workspace",
    "unit: marks tests as unit tests (fast, no external dependencies)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/cassandra"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
